--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "oxide.ts": "^1.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "zod": "^3.22.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
