--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@material-tailwind/html": "^2.0.0",
     "ionicons": "^7.0.0",
     "oxide.ts": "^1.1.0",
     "rxjs": "~7.8.0",
