--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.3.0",
     "@capacitor/haptics": "5.0.6",
@@ -34,6 +35,7 @@
     "oxide.ts": "^1.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tw-elements": "^1.0.0-rc.1",
     "zod": "^3.22.2",
     "zone.js": "~0.13.0"
   },
