--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-rc.1",
+    "ulidx": "^2.1.0",
     "zod": "^3.22.2",
     "zone.js": "~0.13.0"
   },
