--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/material": "~16.2.1",
     "@angular/platform-browser": "^16.0.0",
@@ -33,6 +34,8 @@
     "@ionic/angular": "^7.0.0",
     "@material-tailwind/html": "^2.0.0",
     "@ngrx/store": "^16.2.0",
+    "firebase": "^9.23.0",
+    "geofire": "^6.0.0",
     "ionicons": "^7.0.0",
     "mapbox-gl": "^2.15.0",
     "oxide.ts": "^1.1.0",
