--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@material-tailwind/html": "^2.0.0",
     "@ngrx/store": "^16.2.0",
     "firebase": "^9.23.0",
