fix(auth-excel): add AuthDataExcel

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-rc.1",
     "ulidx": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.2",
     "zone.js": "~0.13.0"
   },
