--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tw-elements": "^1.0.0-rc.1",
     "ulidx": "^2.1.0",
     "zod": "^3.22.2",
+    "zod-validation-error": "^1.5.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
