--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.4.0",
+    "@faker-js/faker": "^8.2.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/mapbox-gl": "^2.7.14",
