--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
   "root": true,
   "ignorePatterns": ["projects/**/*"],
-  "overrides": [
+	"plugins"  : [
+		"sonarjs"
+	],
+	"overrides": [
     {
       "files": ["*.ts"],
       "parserOptions": {
@@ -10,7 +13,9 @@
       },
       "extends": [
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+	      "plugin:security/recommended",
+	      "plugin:sonarjs/recommended"
       ],
       "rules": {
         "@angular-eslint/component-class-suffix": [
