--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "firebase": "^9.23.0",
     "geofire": "^6.0.0",
+    "geofire-common": "^6.0.0",
     "ionicons": "^7.0.0",
     "mapbox-gl": "^2.15.0",
     "oxide.ts": "^1.1.0",
